--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	<script src="services/dataBaseServ.js" type="text/javascript"></script>
 	<script src="services/sectorServ.js" type="text/javascript"></script>
 	<script src="services/mapServ.js" type="text/javascript"></script>
+	<script src="services/uploadServ.js" type="text/javascript"></script>
 	<script src="controllers/loginCtrl.js" type="text/javascript"></script>
 	<script src="controllers/registerCtrl.js" type="text/javascript"></script>
 	<script src="controllers/administratorCtrl.js" type="text/javascript"></script>
