--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
 	<script src="controllers/registerCtrl.js" type="text/javascript"></script>
 	<script src="controllers/administratorCtrl.js" type="text/javascript"></script>
 	<script src="controllers/userCtrl.js" type="text/javascript"></script>
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1PbBv2UmDRswnG528poGWnEbyYSzzknE&callback&language=uk" async defer></script> -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD1PbBv2UmDRswnG528poGWnEbyYSzzknE&callback&language=uk" async defer></script>
 </body>
 </html>
