--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 	<script src="services/sectorServ.js" type="text/javascript"></script>
 	<script src="services/mapServ.js" type="text/javascript"></script>
 	<script src="services/uploadServ.js" type="text/javascript"></script>
+	<script src="services/userMapServ.js" type="text/javascript"></script>
 	<script src="controllers/loginCtrl.js" type="text/javascript"></script>
 	<script src="controllers/registerCtrl.js" type="text/javascript"></script>
 	<script src="controllers/administratorCtrl.js" type="text/javascript"></script>
